tests/ok/pattern-ref-runtime-sequence-rest.ari
fn read(value: ref i64) -> i64 {
  let raw: ptr i64 = value as ptr i64;
  return *raw;
}

fn write(value: ref mut i64, amount: i64) -> void {
  let raw: ptr i64 = value as ptr i64;
  *raw = *raw + amount;
}

fn read_unique(value: ref mut i64) -> i64 {
  let raw: ptr i64 = value as ptr i64;
  return *raw;
}

fn main() -> i64 {
  var values: Vec[i64] = [5, 6, 7];
  var total = 0;

  {
    let ref [head, tail @ ..] = values;
    total = total + read(head) + len(tail) + tail[0] + tail[1];
  }

  {
    let ref mut [first, middle @ .., _] = values;
    write(first, 10);
    total = total + len(middle) + middle[0] + read_unique(first);
  }

  return total;
}
