tests/errors/pattern-ref-runtime-sequence-suffix.ari
fn main() -> i64 {
  var values: Vec[i64] = [1, 2, 3];
  let ref [head, rest @ .., last] = values;
  return head + last + len(rest);
}
